--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
         <i class="bi bi-mailbox-flag fs-3"></i>
         <p>
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Email Us <br>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;info@example.com
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;dangetisaiganesh18@gmail.com
         </p>
       </div>
     </div>
@@ -677,7 +677,7 @@
         <label for="name"></label>
         <input type="text" name="user" id="name" placeholder="Enter Your Name" required> <br>
         <label for="email"></label>
-        <input type="email" name="email" id="email" placeholder="Enter Your Email" readonly> <br>
+        <input type="email" name="email" id="email" placeholder="Enter Your Email" required> <br>
 
       </div>
       <div class="s11names2">
@@ -700,32 +700,32 @@
       <div class="container">
         <div class="row gy-4">
           <div class="col-lg-4 col-md-6 footer-about">
-            <a href="https://themewagon.github.io/gp/index.html" class="logo d-flex align-items-center">
+            <a href="#" class="logo d-flex align-items-center">
               <span class="sitename">GP</span>
             </a>
             <div class="footer-contact pt-3">
               <p>A108 Adam Street</p>
               <p>New York, NY 535022</p>
               <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-              <p><strong>Email:</strong> <span>info@example.com</span></p>
+              <p><strong>Email:</strong> <span>dangetisaiganesh18@gmail.com</span></p>
             </div>
             <div class="social-links d-flex mt-4">
-              <a href="https://themewagon.github.io/gp/"><i class="bi bi-twitter-x"></i></a>
-              <a href="https://themewagon.github.io/gp/"><i class="bi bi-facebook"></i></a>
-              <a href="https://themewagon.github.io/gp/"><i class="bi bi-instagram"></i></a>
-              <a href="https://themewagon.github.io/gp/"><i class="bi bi-linkedin"></i></a>
+              <a href="#"><i class="bi bi-twitter-x"></i></a>
+              <a href="#"><i class="bi bi-facebook"></i></a>
+              <a href="#"><i class="bi bi-instagram"></i></a>
+              <a href="#"><i class="bi bi-linkedin"></i></a>
             </div>
           </div>
 
           <div class="col-lg-2 col-md-3 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bi bi-chevron-right"></i> <a href="https://themewagon.github.io/gp/#"> Home</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="https://themewagon.github.io/gp/#"> About us</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="https://themewagon.github.io/gp/#"> Services</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="https://themewagon.github.io/gp/#"> Terms of service</a>
+              <li><i class="bi bi-chevron-right"></i> <a href="#"> Home</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#"> About us</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#"> Services</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#"> Terms of service</a>
               </li>
-              <li><i class="bi bi-chevron-right"></i> <a href="https://themewagon.github.io/gp/#"> Privacy policy</a>
+              <li><i class="bi bi-chevron-right"></i> <a href="#"> Privacy policy</a>
               </li>
             </ul>
           </div>
@@ -733,13 +733,13 @@
           <div class="col-lg-2 col-md-3 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bi bi-chevron-right"></i> <a href="https://themewagon.github.io/gp/#"> Web Design</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="https://themewagon.github.io/gp/#"> Web Development</a>
+              <li><i class="bi bi-chevron-right"></i> <a href="#"> Web Design</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#"> Web Development</a>
               </li>
-              <li><i class="bi bi-chevron-right"></i> <a href="https://themewagon.github.io/gp/#"> Product
+              <li><i class="bi bi-chevron-right"></i> <a href="#"> Product
                   Management</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="https://themewagon.github.io/gp/#"> Marketing</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="https://themewagon.github.io/gp/#"> Graphic Design</a>
+              <li><i class="bi bi-chevron-right"></i> <a href="#"> Marketing</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#"> Graphic Design</a>
               </li>
             </ul>
           </div>
